Supabase-Backend Code
Supabase-Backend Code

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "firebase": "^10.7.2",
     "fullcalendar": "^6.1.10",
     "generate-react-cli": "^8.4.0",
+    "gridjs": "^6.2.0",
     "gridjs-react": "^6.1.1",
     "leaflet": "^1.9.4",
     "moment": "^2.30.1",
