--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@simonwep/pickr": "^1.9.0",
     "@south-paw/react-vector-maps": "^3.2.0",
+    "@supabase/supabase-js": "^2.43.4",
     "@tailwindcss/forms": "^0.5.7",
     "@types/leaflet": "^1.9.8",
     "@types/react-datepicker": "^4.19.5",
