Build issue solve

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build 2>&1 | findstr /V /C:\"API routes and middleware\"",
+    "build": "next build 2>&1 | grep -v \"API routes and middleware\"",
     "start": "next start",
     "lint": "next lint",
     "postcss": "sass ./public/assets/scss/style.scss ./public/assets/css/style.css && postcss ./public/assets/css/style.css -o ./public/assets/css/style.css",
