Add supabase and validations [Login page TS work]

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/material": "^5.14.13",
     "@reduxjs/toolkit": "^1.9.7",
     "@simonwep/pickr": "^1.9.0",
+    "@supabase/supabase-js": "^2.43.4",
     "@tailwindcss/forms": "^0.5.7",
     "@types/date-fns": "^2.6.0",
     "@types/leaflet": "^1.9.8",
@@ -76,10 +77,12 @@
     "redux-thunk": "^2.4.2",
     "sass": "^1.69.5",
     "simplebar-react": "^3.2.4",
+    "sweetalert": "^2.1.2",
     "sweetalert2": "^11.10.1",
     "swiper": "^11.0.5",
     "tailwind-clip-path": "^1.0.0",
-    "yet-another-react-lightbox": "^3.15.6"
+    "yet-another-react-lightbox": "^3.15.6",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^5.0.0",
@@ -90,6 +93,7 @@
     "eslint-config-next": "14.0.0",
     "node-sass": "^9.0.0",
     "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.4.5"
   }
 }
