--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ynex",
+  "name": "Litmus",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -37,6 +37,7 @@
     "filepond-plugin-image-exif-orientation": "^1.0.11",
     "filepond-plugin-image-preview": "^4.6.11",
     "firebase": "^10.6.0",
+    "fullcalendar": "^6.1.13",
     "gridjs": "^6.0.6",
     "gridjs-react": "^6.0.1",
     "leaflet": "^1.9.4",
