--- a/vercel.json
+++ b/vercel.json
@@ -10,5 +10,9 @@
       ]
     }
   ],
-  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+  "rewrites": [
+    {
+      "source": "/(.*)"
+    }
+  ]
 }
