--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "sass": "^1.69.5",
     "simplebar-react": "^3.2.4",
     "sweetalert": "^2.1.2",
-    "sweetalert2": "^11.10.1",
+    "sweetalert2": "^11.11.0",
     "swiper": "^11.0.5",
     "tabler-icons-react": "^1.56.0",
     "tailwind-clip-path": "^1.0.0",
@@ -97,6 +97,7 @@
     "eslint-config-next": "^14.2.3",
     "node-sass": "^9.0.0",
     "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.4.5"
   }
 }
