--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-helmet-async": "^1.3.0",
     "react-leaflet": "^4.2.1",
     "react-multi-select-component": "^4.3.4",
+    "react-paginate": "^8.2.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-quill": "^2.0.0",
     "react-range": "^1.8.14",
