--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-helmet-async": "^1.3.0",
     "react-leaflet": "^4.2.1",
     "react-multi-select-component": "^4.3.4",
+    "react-paginate": "^8.2.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-quill": "^2.0.0",
     "react-range": "^1.8.14",
@@ -82,7 +83,7 @@
     "sass": "^1.69.5",
     "simplebar-react": "^3.2.4",
     "sweetalert": "^2.1.2",
-    "sweetalert2": "^11.10.1",
+    "sweetalert2": "^11.11.0",
     "swiper": "^11.0.5",
     "tabler-icons-react": "^1.56.0",
     "tailwind-clip-path": "^1.0.0",
