Revert "fix(bulid): vercel json update"
This reverts commit 5fd8f58cfc358596dadc99921b8aafb15a87d9e4.

--- a/vercel.json
+++ b/vercel.json
@@ -10,9 +10,5 @@
       ]
     }
   ],
-  "rewrites": [
-    {
-      "source": "/(.*)"
-    }
-  ]
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
