--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react-datepicker": "^4.19.5",
     "@types/react-simple-maps": "^3.0.4",
     "apexcharts": "^3.44.2",
+    "babel-eslint": "^10.1.0",
     "chart.js": "^4.4.3",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
