--- a/package.json
+++ b/package.json
@@ -18,13 +18,21 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.43.4",
+    "apexcharts": "^3.49.1",
     "clsx": "^2.0.0",
     "lucide-react": "^0.376.0",
     "next": "^14.0.4",
+    "preline": "^2.3.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "sass": "^1.77.4",
+    "sweetalert": "^2.1.2",
+    "tailwind-clip-path": "^1.0.0",
     "tailwind-merge": "^2.1.0",
+    "yup": "^1.4.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
