--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-toastify": "^10.0.5",
     "sass": "^1.77.4",
     "sweetalert": "^2.1.2",
     "tailwind-clip-path": "^1.0.0",
