--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
-      "eslint --max-warnings=0",
+      "eslint --max-warnings=0 --ignore-pattern '!**/.prettierrc.js'",
       "prettier -w"
     ],
     "**/*.{json,css,scss,md,webmanifest}": [
