fix(github action): fixed github action

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,6 +1,11 @@
 name: Code Check
 on:
-  pull_request: {}
+  push:
+    branches:
+      - '**'
+  pull_request:
+    branches:
+      - '**'
 
 concurrency:
   group: ${{ github.job }}-${{ github.ref }}
