fix(add): layout added

--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
     "@supabase/supabase-js": "^2.43.4",
+    "@types/react": "^18.3.3",
     "apexcharts": "^3.49.1",
     "clsx": "^2.0.0",
     "lucide-react": "^0.376.0",
     "next": "^14.0.4",
     "next-themes": "^0.3.0",
-    "preline": "^2.3.0",
+    "preline": "^1.9.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
@@ -35,6 +36,7 @@
     "react-toastify": "^10.0.5",
     "redux-thunk": "^3.1.0",
     "sass": "^1.77.4",
+    "simplebar-react": "^3.2.5",
     "styled-components": "^6.1.11",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.11.0",
@@ -54,7 +56,6 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@types/node": "^20.13.0",
-    "@types/react": "^18.3.3",
     "@types/testing-library__jest-dom": "^5.14.9",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
