--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^4.12.0",
+    "react-js-pagination": "^3.0.3",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
     "redux-thunk": "^3.1.0",
@@ -56,6 +57,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@types/node": "^20.13.0",
+    "@types/react": "^18.3.3",
+    "@types/react-js-pagination": "^3.0.7",
     "@types/testing-library__jest-dom": "^5.14.9",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
