--- a/package.json
+++ b/package.json
@@ -20,21 +20,25 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
     "@supabase/supabase-js": "^2.43.4",
+    "@types/react": "^18.3.3",
     "apexcharts": "^3.49.1",
     "clsx": "^2.0.0",
+    "lint": "^0.8.19",
     "lucide-react": "^0.376.0",
     "next": "^14.0.4",
     "next-themes": "^0.3.0",
-    "preline": "^2.3.0",
+    "preline": "^1.9.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^4.12.0",
+    "react-js-pagination": "^3.0.3",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
     "redux-thunk": "^3.1.0",
     "sass": "^1.77.4",
+    "simplebar-react": "^3.2.5",
     "styled-components": "^6.1.11",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.11.0",
@@ -55,6 +59,7 @@
     "@testing-library/react": "^13.4.0",
     "@types/node": "^20.13.0",
     "@types/react": "^18.3.3",
+    "@types/react-js-pagination": "^3.0.7",
     "@types/testing-library__jest-dom": "^5.14.9",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
