--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react": "^18.3.3",
     "apexcharts": "^3.49.1",
     "clsx": "^2.0.0",
+    "crypto-js": "^4.2.0",
     "lucide-react": "^0.376.0",
     "next": "^14.0.4",
     "next-themes": "^0.3.0",
@@ -56,6 +57,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^20.13.0",
     "@types/react": "^18.3.3",
     "@types/react-js-pagination": "^3.0.7",
