--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lucide-react": "^0.376.0",
     "next": "^14.0.4",
     "next-themes": "^0.3.0",
+    "pnpm": "^9.2.0",
     "preline": "^1.9.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
