--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
     "@supabase/supabase-js": "^2.43.4",
+    "@types/moment": "^2.13.0",
     "@types/react": "^18.3.3",
     "apexcharts": "^3.49.1",
     "clsx": "^2.0.0",
     "crypto-js": "^4.2.0",
     "lucide-react": "^0.376.0",
+    "moment": "^2.30.1",
     "next": "^14.0.4",
     "next-themes": "^0.3.0",
     "pnpm": "^9.2.0",
