--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@supabase/supabase-js": "^2.43.4",
     "@types/moment": "^2.13.0",
     "@types/react": "^18.3.3",
+    "@types/yup": "^0.32.0",
     "apexcharts": "^3.49.1",
     "clsx": "^2.0.0",
     "crypto-js": "^4.2.0",
