--- a/package.json
+++ b/package.json
@@ -20,13 +20,17 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
     "@supabase/supabase-js": "^2.43.4",
+    "@types/moment": "^2.13.0",
     "@types/react": "^18.3.3",
+    "@types/yup": "^0.32.0",
     "apexcharts": "^3.49.1",
     "clsx": "^2.0.0",
-    "lint": "^0.8.19",
+    "crypto-js": "^4.2.0",
     "lucide-react": "^0.376.0",
+    "moment": "^2.30.1",
     "next": "^14.0.4",
     "next-themes": "^0.3.0",
+    "pnpm": "^9.2.0",
     "preline": "^1.9.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
@@ -57,6 +61,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^20.13.0",
     "@types/react": "^18.3.3",
     "@types/react-js-pagination": "^3.0.7",
