--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react": "^18.3.3",
     "@types/yup": "^0.32.0",
     "apexcharts": "^3.49.1",
+    "axios": "^1.7.2",
     "clsx": "^2.0.0",
     "crypto-js": "^4.2.0",
     "lucide-react": "^0.376.0",
